--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   --btn-clr: var(--neutral-100);
   --text-shadow: #000;
   --toggle-bg: var(--primary-clr-300);
-  --backgroundImg: url('../img/bg-mobile-dark.jpg');
+  --backgroundImg: url('../img/image.avif');
   --backgroundImgDesktop: url('../img/bg-desktop-dark.jpg');
 }
 button {
@@ -42,24 +42,7 @@ button {
   --backgroundImg: url('../img/bg-mobile-light.jpg');
   --backgroundImgDesktop: url('../img/bg-desktop-light.jpg');
 }
-:root:has(#light:checked) {
-  --primary-clr-300: hsl(0, 0%, 98%);
-  --primary-clr-400: hsl(0, 0%, 100%);
-  --accent-clr-100: hsl(225, 100%, 98%);
-  --accent-clr-200: hsl(200deg 3.76% 44.77%);
-  --neutral-100: hsl(200, 15%, 8%);
-  --neutral-200: var(--neutral-100);
-  --bg-gradient-clr-1: hsl(225, 100%, 98%);
-  --bg-gradient-clr-2: hsl(225, 100%, 98%);
-  --accent-clr-100: hsl(0, 0%, 95%);
-  --btn-gradient-clr-1: hsl(265, 77%, 69%);
-  --btn-gradient-clr-2: hsl(214, 93%, 72%);
-  --shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-  --btn-clr: var(--primary-clr-400);
-  --toggle-bg: hsl(228deg 97.75% 68.16%);
-  --backgroundImg: url('../img/bg-mobile-light.jpg');
-  --backgroundImgDesktop: url('../img/bg-desktop-light.jpg');
-}
+
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -71,11 +54,18 @@ html {
   margin: 0;
   padding: 0;
 }
+
 body {
   height: 100vh;
   font-family: 'Josefin Sans', sans-serif;
   background-color: var(--primary-clr-400);
   color: var(--neutral-100);
+  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+.toggle__btn {
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
 .wrapper {
   width: 100%;
@@ -143,12 +133,14 @@ h1 {
   height: 21.375rem;
   width: 100%;
   position: absolute;
-  background: linear-gradient(
+  /* background-image: var(--backgroundImg); */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    var(--backgroundImg);
+  /* background: linear-gradient(
     to left,
     var(--bg-gradient-clr-2),
     var(--bg-gradient-clr-1)
-  );
-  background-image: var(--backgroundImg);
+  ); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -166,10 +158,11 @@ h1 {
   padding: 0;
   display: flex;
 }
+.toggle__icon {
+  font-size: 1.6rem;
+  color: #fff;
+}
 @media (min-width: 40em) {
-  .main:before {
-    background-image: var(--backgroundImgDesktop);
-  }
   .toggle {
     width: auto;
   }
@@ -216,58 +209,6 @@ h1 {
   width: 1.375rem;
   height: 1.625rem;
   margin: 0 -0.125rem;
-}
-.toggle input[type='radio']:focus ~ .toggle__switcher {
-  border: 2px solid #fff;
-}
-.toggle__icon-wrapper {
-  pointer-events: none;
-  z-index: 1;
-  padding-top: 0.0625rem;
-  position: absolute;
-  top: 0.1875rem;
-  left: 50%;
-  transform: translate(-50%);
-}
-.toggle__icon {
-  -webkit-text-stroke-color: #fff;
-  color: #fff;
-}
-.toggle__icon:first-child {
-  margin-right: 0.25rem;
-}
-.toggle__icon:last-child {
-  margin-left: 0.3125rem;
-}
-.toggle__background {
-  height: 100%;
-  width: 100%;
-  pointer-events: none;
-  background: var(--toggle-bg);
-  border-radius: 0.75rem;
-  display: block;
-  position: absolute;
-  top: 0;
-}
-.toggle__switcher {
-  width: 1.125rem;
-  height: 1.125rem;
-  background-color: var(--neutral-200);
-  z-index: 100;
-  border-radius: 50%;
-  transition: all 0.15s ease-in-out;
-  position: absolute;
-  top: 0.1875rem;
-  left: 0.1875rem;
-  right: 100%;
-}
-.toggle #light:checked ~ .toggle__switcher {
-  left: calc(100% - 21px);
-  right: 3px;
-}
-
-.toggle #dark:checked ~ .toggle_switcher {
-  left: 0;
 }
 .form {
   position: relative;
@@ -489,13 +430,3 @@ input[type='checkbox'] {
     opacity: 1;
   }
 }
-/* @keyframes content-load-out{
-  from {
-    transform: translateY(0)
-    opacity: 1;
-  }
-  to{
-    transform: translateY(-20px);
-    opacity: 0;
-  }
-} */
